--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "check-db": "node check-db.js",
     "view-db": "node view-db.js",
     "view-users": "node view-users.js",
-    "export-users": "node export-users.js"
+    "export-users": "node export-users.js",
+    "clear-db": "node clear-db.js"
   },
   "dependencies": {
     "express": "^4.18.2",
